<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingStart="16dp"
    android:id="@+id/login_layout">

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        style="@style/TextAppearance.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/input_email"
            style="@style/TextAppearance.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/colorWhite" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextAppearance.App.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:passwordToggleDrawable="@drawable/ic_visibility_24dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_password"
            style="@style/TextAppearance.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:backgroundTint="@color/colorWhite" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorWhite"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textColorLink="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:gravity="center"
        android:layout_gravity="center" />

</LinearLayout>